--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@
         .navigation {
             background: var(--primary-green);
             padding: 0;
+            position: fixed;
+            width: 100%;
+            top: 120px;
+            z-index: 999;
+            transition: top 0.3s ease;
+        }
+
+        .header.scrolled + .navigation {
+            top: 80px;
         }
 
         .nav-container {
@@ -215,7 +224,7 @@
             text-align: center;
             color: white;
             position: relative;
-            margin-top: 140px;
+            margin-top: 180px;
         }
 
         .hero-content {
@@ -484,25 +493,48 @@
         /* Install Button */
         .install-button {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: var(--primary-green);
-            color: white;
+            bottom: 30px;
+            right: 30px;
+            background: var(--gold);
+            color: var(--primary-green);
             border: none;
-            padding: 15px 20px;
+            padding: 16px 22px;
             border-radius: 50px;
             cursor: pointer;
-            font-weight: 600;
-            box-shadow: var(--shadow-lg);
+            font-weight: 700;
+            font-size: 14px;
+            box-shadow: 0 8px 25px rgba(212, 175, 55, 0.4);
             display: none;
             align-items: center;
-            gap: 8px;
-            z-index: 1000;
+            gap: 10px;
+            z-index: 1001;
             transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            min-width: 140px;
+            justify-content: center;
         }
 
         .install-button:hover {
-            transform: translateY(-2px);
+            transform: translateY(-3px);
+            box-shadow: 0 12px 35px rgba(212, 175, 55, 0.6);
+            background: white;
+        }
+
+        .install-button.show {
+            display: flex;
+            animation: slideInUp 0.5s ease;
+        }
+
+        @keyframes slideInUp {
+            from {
+                transform: translateY(100px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
 
         /* Mobile Styles */
@@ -542,7 +574,7 @@
 
             .nav-menu.active {
                 height: auto;
-                top: 200px;
+                top: 250px;
             }
 
             .nav-menu a {
@@ -560,7 +592,7 @@
             }
 
             .hero {
-                margin-top: 200px;
+                margin-top: 250px;
                 height: 70vh;
             }
 
@@ -893,23 +925,38 @@
         let deferredPrompt;
         const installButton = document.getElementById('install-button');
 
+        // Show install button after page loads (for testing)
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                if (!window.matchMedia('(display-mode: standalone)').matches) {
+                    installButton.classList.add('show');
+                }
+            }, 3000);
+        });
+
         window.addEventListener('beforeinstallprompt', (e) => {
+            console.log('beforeinstallprompt fired');
             e.preventDefault();
             deferredPrompt = e;
-            installButton.style.display = 'flex';
+            installButton.classList.add('show');
         });
 
         installButton.addEventListener('click', async () => {
             if (deferredPrompt) {
                 deferredPrompt.prompt();
                 const { outcome } = await deferredPrompt.userChoice;
+                console.log(`User response to the install prompt: ${outcome}`);
                 deferredPrompt = null;
-                installButton.style.display = 'none';
+                installButton.classList.remove('show');
+            } else {
+                // Fallback for browsers that don't support PWA install
+                alert('To install this app:\n\n• On Chrome: Look for "Install" in the address bar\n• On Safari: Tap Share > Add to Home Screen\n• On Firefox: Look for "Install" in the menu');
             }
         });
 
         window.addEventListener('appinstalled', () => {
-            installButton.style.display = 'none';
+            console.log('PWA was installed');
+            installButton.classList.remove('show');
         });
 
         // Loading Screen
@@ -947,10 +994,12 @@
                 const target = document.querySelector(this.getAttribute('href'));
                 if (target) {
                     const headerHeight = document.getElementById('header').offsetHeight + 60;
-                    const targetPosition = target.offsetTop - headerHeight;
+                    const navHeight = document.querySelector('.navigation').offsetHeight;
+                    const totalOffset = headerHeight + navHeight;
+                    const targetPosition = target.offsetTop - totalOffset;
                     
                     window.scrollTo({
-                        top: targetPosition,
+                        top: Math.max(0, targetPosition),
                         behavior: 'smooth'
                     });
                     navMenu.classList.remove('active');
