--- a/index.html
+++ b/index.html
@@ -717,86 +717,89 @@
         .loading-container {
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
-            border-radius: 25px;
-            padding: 50px 40px;
+            border-radius: 20px;
+            padding: 30px 25px;
             text-align: center;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-width: 500px;
+            max-width: 420px;
             width: 90%;
+            max-height: 85vh;
+            overflow-y: auto;
             border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
         .loading-logo {
-            width: 120px;
+            width: 80px;
             height: auto;
-            margin-bottom: 25px;
+            margin-bottom: 15px;
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
         }
 
         .loading-title {
             font-family: 'Playfair Display', serif;
-            font-size: 2rem;
+            font-size: 1.6rem;
             font-weight: 700;
             color: var(--primary-green);
-            margin-bottom: 10px;
+            margin-bottom: 8px;
+            line-height: 1.2;
         }
 
         .loading-tagline {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: var(--gray-text);
-            margin-bottom: 8px;
+            margin-bottom: 6px;
             font-weight: 500;
         }
 
         .loading-established {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             color: var(--gold);
             font-weight: 700;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 30px;
+            letter-spacing: 0.5px;
+            margin-bottom: 20px;
         }
 
         .loading-info {
             background: var(--light-green);
-            border-radius: 15px;
-            padding: 25px;
-            margin-bottom: 30px;
-            border-left: 4px solid var(--primary-green);
+            border-radius: 12px;
+            padding: 18px;
+            margin-bottom: 20px;
+            border-left: 3px solid var(--primary-green);
         }
 
         .loading-info h3 {
             font-family: 'Playfair Display', serif;
             color: var(--primary-green);
-            font-size: 1.3rem;
-            margin-bottom: 15px;
+            font-size: 1.1rem;
+            margin-bottom: 12px;
             font-weight: 600;
         }
 
         .loading-features {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 12px;
+            gap: 8px;
             text-align: left;
         }
 
         .loading-feature {
             display: flex;
             align-items: center;
-            gap: 8px;
-            font-size: 0.9rem;
+            gap: 6px;
+            font-size: 0.8rem;
             color: var(--dark-text);
         }
 
         .loading-feature .icon {
-            width: 16px;
-            height: 16px;
+            width: 14px;
+            height: 14px;
             background: var(--primary-green);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 10px;
+            font-size: 9px;
             color: white;
             flex-shrink: 0;
         }
@@ -807,43 +810,42 @@
             align-items: center;
             background: var(--primary-green);
             color: white;
-            padding: 15px 20px;
-            border-radius: 12px;
-            margin-bottom: 25px;
+            padding: 12px 16px;
+            border-radius: 10px;
+            margin-bottom: 18px;
         }
 
         .loading-phone {
             font-weight: 700;
-            font-size: 1.1rem;
+            font-size: 1rem;
         }
 
         .loading-cta {
             background: var(--gold);
             color: var(--primary-green);
-            padding: 8px 15px;
-            border-radius: 20px;
-            font-size: 0.85rem;
+            padding: 6px 12px;
+            border-radius: 15px;
+            font-size: 0.75rem;
             font-weight: 600;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
+            letter-spacing: 0.3px;
         }
 
         .spinner {
-            width: 50px;
-            height: 50px;
-            border: 4px solid var(--light-green);
-            border-top: 4px solid var(--primary-green);
+            width: 40px;
+            height: 40px;
+            border: 3px solid var(--light-green);
+            border-top: 3px solid var(--primary-green);
             border-radius: 50%;
             animation: spin 1.5s ease-in-out infinite;
-            margin: 0 auto;
+            margin: 0 auto 15px;
         }
 
         .loading-progress {
             width: 100%;
-            height: 4px;
+            height: 3px;
             background: var(--light-green);
             border-radius: 2px;
-            margin-top: 20px;
             overflow: hidden;
         }
 
@@ -855,34 +857,54 @@
             transform-origin: left;
         }
 
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
-
-        @keyframes loadingProgress {
-            from { transform: scaleX(0); }
-            to { transform: scaleX(1); }
-        }
-
         /* Mobile Loading Adjustments */
-        @media (max-width: 480px) {
+        @media (max-width: 768px) {
             .loading-container {
-                padding: 35px 25px;
-                margin: 20px;
+                padding: 25px 20px;
+                margin: 15px;
+                max-width: 350px;
+                max-height: 80vh;
             }
 
             .loading-title {
-                font-size: 1.6rem;
+                font-size: 1.4rem;
             }
 
             .loading-features {
                 grid-template-columns: 1fr;
+                gap: 6px;
             }
 
             .loading-contact {
                 flex-direction: column;
-                gap: 10px;
+                gap: 8px;
                 text-align: center;
+                padding: 15px;
+            }
+
+            .loading-phone {
+                font-size: 1.1rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .loading-container {
+                padding: 20px 15px;
+                margin: 10px;
+                max-width: 300px;
+                max-height: 75vh;
+            }
+
+            .loading-title {
+                font-size: 1.3rem;
+            }
+
+            .loading-tagline {
+                font-size: 0.85rem;
+            }
+
+            .loading-established {
+                font-size: 0.75rem;
             }
         }
 
