--- a/index.html
+++ b/index.html
@@ -179,25 +179,7 @@
         .header-contact {
             display: flex;
             align-items: center;
-            gap: 30px;
-        }
-
-        .contact-item {
-            text-align: center;
-        }
-
-        .contact-item .label {
-            font-size: 0.7rem;
-            color: var(--gray-text);
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            margin-bottom: 3px;
-        }
-
-        .contact-item .value {
-            font-size: 1rem;
-            font-weight: 700;
-            color: var(--primary-green);
+            gap: 0;
         }
 
         .cta-header {
@@ -953,88 +935,88 @@
             background: rgba(255, 255, 255, 0.95);
             backdrop-filter: blur(10px);
             border-radius: 20px;
-            padding: 30px 25px;
+            padding: 25px 20px;
             text-align: center;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-width: 420px;
+            max-width: 380px;
             width: 90%;
-            max-height: 85vh;
-            overflow-y: auto;
+            max-height: 75vh;
+            overflow: hidden;
             border: 2px solid rgba(255, 255, 255, 0.2);
         }
 
         .loading-logo {
-            width: 80px;
+            width: 70px;
             height: auto;
-            margin-bottom: 15px;
+            margin-bottom: 12px;
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
         }
 
         .loading-title {
             font-family: 'Playfair Display', serif;
-            font-size: 1.6rem;
+            font-size: 1.4rem;
             font-weight: 700;
             color: var(--primary-green);
-            margin-bottom: 8px;
-            line-height: 1.2;
+            margin-bottom: 6px;
+            line-height: 1.1;
         }
 
         .loading-tagline {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             color: var(--gray-text);
-            margin-bottom: 6px;
+            margin-bottom: 4px;
             font-weight: 500;
         }
 
         .loading-established {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
             color: var(--gold);
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.5px;
-            margin-bottom: 20px;
+            margin-bottom: 16px;
         }
 
         .loading-info {
             background: var(--light-green);
-            border-radius: 12px;
-            padding: 18px;
-            margin-bottom: 20px;
+            border-radius: 10px;
+            padding: 14px;
+            margin-bottom: 16px;
             border-left: 3px solid var(--primary-green);
         }
 
         .loading-info h3 {
             font-family: 'Playfair Display', serif;
             color: var(--primary-green);
-            font-size: 1.1rem;
-            margin-bottom: 12px;
+            font-size: 1rem;
+            margin-bottom: 10px;
             font-weight: 600;
         }
 
         .loading-features {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 8px;
+            gap: 6px;
             text-align: left;
         }
 
         .loading-feature {
             display: flex;
             align-items: center;
-            gap: 6px;
-            font-size: 0.8rem;
+            gap: 5px;
+            font-size: 0.7rem;
             color: var(--dark-text);
         }
 
         .loading-feature .icon {
-            width: 14px;
-            height: 14px;
+            width: 12px;
+            height: 12px;
             background: var(--primary-green);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 9px;
+            font-size: 8px;
             color: white;
             flex-shrink: 0;
         }
@@ -1045,35 +1027,35 @@
             align-items: center;
             background: var(--primary-green);
             color: white;
-            padding: 12px 16px;
-            border-radius: 10px;
-            margin-bottom: 18px;
+            padding: 10px 14px;
+            border-radius: 8px;
+            margin-bottom: 14px;
         }
 
         .loading-phone {
             font-weight: 700;
-            font-size: 1rem;
+            font-size: 0.9rem;
         }
 
         .loading-cta {
             background: var(--gold);
             color: var(--primary-green);
-            padding: 6px 12px;
-            border-radius: 15px;
-            font-size: 0.75rem;
+            padding: 5px 10px;
+            border-radius: 12px;
+            font-size: 0.7rem;
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.3px;
         }
 
         .spinner {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             border: 3px solid var(--light-green);
             border-top: 3px solid var(--primary-green);
             border-radius: 50%;
             animation: spin 1.5s ease-in-out infinite;
-            margin: 0 auto 15px;
+            margin: 0 auto 10px;
         }
 
         .loading-progress {
@@ -1242,15 +1224,7 @@
                 </div>
             </div>
             <div class="header-contact">
-                <div class="contact-item">
-                    <div class="label">Call Today</div>
-                    <div class="value">(260) 486-1587</div>
-                </div>
-                <div class="contact-item">
-                    <div class="label">Address</div>
-                    <div class="value">7945 Stellhorn Rd</div>
-                </div>
-                <a href="tel:+12604861587" class="cta-header">Free Estimate</a>
+                <a href="#estimate" class="cta-header">Free Estimate</a>
             </div>
         </div>
     </header>
@@ -1284,7 +1258,7 @@
     </section>
 
     <!-- Estimate Form Section -->
-    <section class="estimate-form">
+    <section id="estimate" class="estimate-form">
         <div class="estimate-container">
             <div class="form-intro">
                 <h2>Get An Estimate</h2>
